# flowstack-old

./: .gitignore  pyproject.toml
flowstack/: pyproject.toml
flowstack/flowstack/artifacts/: __init__.py  base.py  blob.py  link.py  table.py  text.py
flowstack/flowstack/components/ai/: __init__.py  base.py  chat_generator.py  embedder.py
flowstack/flowstack/components/parsers/: __init__.py  base.py  recursive_character.py  utils.py
flowstack/flowstack/components/parsers/text/: base.py
flowstack/flowstack/components/retrievers/: __init__.py  base.py
flowstack/flowstack/core/: __init__.py  base.py  component.py  decorator.py  docorator.py  effect.py  functional.py  parallel.py  passthrough.py  sequential.py
flowstack/flowstack/core/fault_handling/: fallbacks.py  retry.py
flowstack/flowstack/flows/: __init__.py  constants.py  errors.py  typing.py
flowstack/flowstack/flows/builders/: __init__.py  flow.py  state.py
flowstack/flowstack/flows/channels/: __init__.py  any_value.py  base.py  binop.py  context.py  dynamic_barrier.py  ephemeral.py  last_value.py  manager.py  named_barrier.py  topic.py  utils.py
flowstack/flowstack/flows/checkpoints/: __init__.py  base.py  sqlite.py  utils.py
flowstack/flowstack/flows/managed/: __init__.py  base.py  few_shot.py  is_last_step.py
flowstack/flowstack/flows/pregel/: __init__.py  algo.py  base.py  debug.py  executor.py  graph.py  loop.py  node.py  read.py  utils.py  write.py
flowstack/flowstack/flows/serde/: __init__.py  base.py  json_plus.py
flowstack/flowstack/ingest/: __init__.py  loader.py
flowstack/flowstack/interfaces/: __init__.py  querying.py
flowstack/flowstack/messages/: __init__.py  ai.py  base.py  human.py  system.py  tool.py  utils.py
flowstack/flowstack/stores/: __init__.py
flowstack/flowstack/stores/graph/: base.py  simple.py  types.py
flowstack/flowstack/stores/vector/: base.py  simple.py  typing.py
flowstack/flowstack/typing/: __init__.py  effect.py  filtering.py  models.py  registry.py  types.py
flowstack/flowstack/utils/: constants.py  func.py  paths.py  reflection.py  serialization.py  string.py  threading.py
flowstack/flowstack/workflows/: __init__.py  typing.py  workflow.py
integrations/chroma/: pyproject.toml
integrations/chroma/flowstack/chroma/: vector_store.py
integrations/instructor/: pyproject.toml
integrations/instructor/flowstack/instructor/: __init__.py  chat_generator.py
integrations/neo4j/: pyproject.toml
integrations/neo4j/flowstack/neo4j/: graph_store.py
integrations/openai/: pyproject.toml
integrations/openai/flowstack/openai/: __init__.py  embedder.py
integrations/tavily/: pyproject.toml
integrations/tavily/flowstack/tavily/: __init__.py  retriever.py
integrations/wikipedia/: pyproject.toml
integrations/wikipedia/flowstack/wikipedia/: __init__.py  loader.py  query_loader.py  query_retriever.py  retriever.py
libs/flowstack-components/: pyproject.toml
libs/flowstack-components/flowstack/components/builders/: prompt_template.py
libs/flowstack-types/: pyproject.toml
