[tool.poetry]
name = "flowstack-monorepo"
version = "0.1.0"
description = ""
authors = ["bensg <gabay67890@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flowstack = { path = "flowstack/" }

[tool.poetry.group.dev.dependencies]
langchainhub = "^0.1.20"
flowstack-openai = { path = "integrations/openai/" }
flowstack-chroma = { path = "integrations/chroma/" }
flowstack-tavily = { path = "integrations/tavily/" }
flowstack-wikipedia = { path = "integrations/wikipedia/" }
jupyter = "^1.0.0"