[tool.poetry]
name = "flowstack"
version = "0.1.0"
description = ""
authors = ["bensg <gabay67890@gmail.com>"]
packages = [{ include = "flowstack" }]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.1.19"
docarray = "^0.40.0"
dataclasses-json = "^0.6.7"
unsync = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
